--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -311,7 +311,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117" y="-725"/>
+            <point key="canvasLocation" x="10" y="-585"/>
         </scene>
         <!--Receipt Email View Controller-->
         <scene sceneID="T5s-3p-ytz">
@@ -414,9 +414,9 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Link Receipts" id="yd9-CM-CIe">
-                                        <barButtonItem key="rightBarButtonItem" title="skip" id="2CN-iS-GBg">
+                                        <barButtonItem key="rightBarButtonItem" title="skip" id="Gp4-t3-J4k">
                                             <connections>
-                                                <action selector="skipTapped:" destination="FZI-WL-nLp" id="cBP-DI-nGW"/>
+                                                <action selector="skipTapped:" destination="FZI-WL-nLp" id="z5D-M4-1Ux"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -455,14 +455,13 @@
                         <outlet property="googleMailProviderButton" destination="h2o-fV-4Ko" id="LPz-Qj-mcI"/>
                         <outlet property="gotItButton" destination="ja2-5M-48S" id="koZ-JW-BNp"/>
                         <outlet property="otherMailProviderButton" destination="ldK-sc-fCc" id="0iP-pK-Kpc"/>
-                        <outlet property="skipBarButton" destination="2CN-iS-GBg" id="ca0-04-et7"/>
                         <outlet property="stowawayEmailFooterLabel" destination="fj8-jl-bwF" id="iih-JT-5cp"/>
                         <segue destination="Gqh-qZ-Ggc" kind="modal" identifier="go to payment" id="wbq-E7-Ekt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TaQ-Rj-YoD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="546" y="-725"/>
+            <point key="canvasLocation" x="548" y="-659"/>
         </scene>
         <!--Payment View Controller-->
         <scene sceneID="rF1-fA-BHQ">
@@ -553,7 +552,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Payment" id="7XW-bG-feu">
-                                        <barButtonItem key="rightBarButtonItem" title="skip" id="K67-kK-yDm"/>
+                                        <barButtonItem key="rightBarButtonItem" title="skip" id="y6E-n2-vLw">
+                                            <connections>
+                                                <action selector="skipButtonTapped:" destination="Gqh-qZ-Ggc" id="cEq-RF-x42"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -601,14 +604,13 @@
                         <outlet property="expiryField" destination="xqm-FW-WYl" id="kgg-iX-x2h"/>
                         <outlet property="nameField" destination="1t6-SR-bJq" id="KoN-5p-ndd"/>
                         <outlet property="saveButton" destination="WOm-3h-qW0" id="hu0-Eb-ReD"/>
-                        <outlet property="skipBarButton" destination="K67-kK-yDm" id="oTg-qt-7DR"/>
                         <outlet property="zipField" destination="jui-uf-3g3" id="yX0-ec-jaO"/>
                         <segue destination="721-hy-SPE" kind="modal" identifier="go to terms" id="D7o-TK-Kff"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3v-jh-alh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="985" y="-722"/>
+            <point key="canvasLocation" x="971" y="-780"/>
         </scene>
         <!--Terms And Agreements View Controller - Congrats !-->
         <scene sceneID="dsM-be-Uzr">
@@ -682,7 +684,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tIX-BK-8eR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1433" y="-722"/>
+            <point key="canvasLocation" x="1405" y="-1050"/>
         </scene>
         <!--Enter Pickup Drop Off View Controller - Stowaway-->
         <scene sceneID="k71-rh-kI6">
@@ -696,7 +698,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
                                 <rect key="frame" x="0.0" y="159" width="320" height="409"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
@@ -736,7 +738,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="3F99F227-FAEE-46EF-9445-95686877E212" colorSpace="pattern"/>
+                                <color key="color" patternImage="D5A63DDF-C284-4B47-9F3A-5D01DCC996DF" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pr-OR-ZzO">
                                 <rect key="frame" x="0.0" y="9" width="320" height="44"/>
@@ -782,6 +784,9 @@
                         <outlet property="rideRequestActivityIndicator" destination="7XM-fk-vcd" id="xi8-f3-Zcq"/>
                         <segue destination="ddu-Zc-dJg" kind="modal" identifier="toFindingCrew" id="9AW-cq-4eF"/>
                         <segue destination="vXZ-lx-hvc" kind="modal" identifier="onboarding_login" animates="NO" id="WTk-75-MPQ"/>
+                        <segue destination="FZI-WL-nLp" kind="modal" identifier="onboarding_receipts" animates="NO" id="R97-G3-Fuo"/>
+                        <segue destination="Gqh-qZ-Ggc" kind="modal" identifier="onboarding_payment" animates="NO" id="ozj-xX-N4X"/>
+                        <segue destination="721-hy-SPE" kind="modal" identifier="onboarding_terms" id="nz4-w7-m9s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P2b-pk-H4i" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -804,7 +809,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-335" y="-1259"/>
+            <point key="canvasLocation" x="-399" y="-1379"/>
         </scene>
         <!--Finding Crew View Controller-->
         <scene sceneID="3uT-tg-mP0">
@@ -891,7 +896,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="30" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="066A11AF-68B3-49FD-8BF2-75363C8D39B2" colorSpace="pattern"/>
+                                <color key="color" patternImage="B69CFCDA-A616-4C7A-8FA9-C972EB273462" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -1104,7 +1109,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="066A11AF-68B3-49FD-8BF2-75363C8D39B2" width="320" height="460">
+        <image name="B69CFCDA-A616-4C7A-8FA9-C972EB273462" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -10991,7 +10996,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="3F99F227-FAEE-46EF-9445-95686877E212" width="320" height="460">
+        <image name="D5A63DDF-C284-4B47-9F3A-5D01DCC996DF" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -20886,4 +20891,9 @@ AAAAAAAAAAAJCvs
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="ojm-M0-nu7"/>
+        <segue reference="wbq-E7-Ekt"/>
+        <segue reference="D7o-TK-Kff"/>
+    </inferredMetricsTieBreakers>
 </document>
